# grpc-with-rest

./: .env  .env.example  .gitignore  BUILD  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum  main.go
.github/workflows/: audit.yml
ci/: bazel-test.sh
client/: BUILD.bazel  credit_card.go  credit_card_server.go  user.go
controllers/: handlers.go
database/: BUILD.bazel  database_connection.go
google/api/: BUILD.bazel
handlers/: BUILD.bazel  handler.go  handler_test.go
helper/: BUILD.bazel  helper.go
models/: BUILD.bazel  data_struct.go
proto/: BUILD.bazel  helloworld.pb.go  helloworld.pb.gw.go  helloworld.proto  helloworld_grpc.pb.go  user.pb.go  user.pb.gw.go  user.proto  user_grpc.pb.go
seeds/: BUILD.bazel  create_fake_cc_applications.go  create_fake_credit_cards.go  create_fake_users.go  init.sql.example  migrate_models_in_database.go
server/: BUILD.bazel  grpc_server.go  http_server.go  main.go
ui/: main.go  package-lock.json  package.json  todo.html
ui/src/: App.css  App.js  ApplicantForm.js  Checkout.js  CreateUser.js  CreditCardForm.js  ResidencyForm.js  Review.js
