load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client_lib",
    srcs = [
        "credit_card.go",
        "user.go",
    ],
    importpath = "github.com/flakrimjusufi/grpc-with-rest/client",
    visibility = ["//visibility:private"],
    deps = [
        "//database",
        "//models",
        "//proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
