load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "seeds_lib",
    srcs = [
        "create_fake_cc_applications.go",
        "create_fake_credit_cards.go",
        "create_fake_users.go",
        "migrate_models_in_database.go",
    ],
    importpath = "github.com/flakrimjusufi/grpc-with-rest/seeds",
    visibility = ["//visibility:private"],
    deps = [
        "//database",
        "//models",
        "@com_github_brianvoe_gofakeit_v6//:gofakeit",
    ],
)

go_binary(
    name = "seeds",
    embed = [":seeds_lib"],
    visibility = ["//visibility:public"],
)
